--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
     <head>
         <title>Insomnia XXIII</title>
-        <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
         <style>
             * {
